--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,11 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
-<h:head><title>Travel More!</title></h:head>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui">
+<h:head>
+    <title>Travel More!</title>
+
+</h:head>
 <h:body>
-    <h:graphicImage name="/images/headerlogo.png" alt="headerlogo"/>
-    <p:dataTable var="locatie" value="#{locatieController.locaties}" id="locationDataTable">
+    <h:graphicImage name="/images/headerlogo_transparent.png" alt="headerlogo"/>
+    <b:dataTable var="locatie" value="#{locatieController.locaties}" id="locationDataTable">
         <p:column headerText="Id">
             <h:outputText value="#{locatie.id}" />
         </p:column>
