--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,9 +4,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui">
 <h:head><title>Travel More!</title></h:head>
 <h:body>
+    <b:navBar brand="Brand" brandHref="index.xhtml" fluid="true">
+        <b:navbarLinks>
+            <b:navLink value="Link" href="#"></b:navLink>
+            <b:navLink value="Link" href="#"></b:navLink>
+            <b:dropMenu value="Dropdown" iconAwesome="birthday-cake">
+                <b:navLink value="Action" href="#"></b:navLink>
+                <b:navLink value="Another action" href="#"></b:navLink>
+                <b:navLink value="Something else here" href="#"></b:navLink>
+                <b:navLink></b:navLink>
+                <b:navLink header="Nav header"></b:navLink>
+                <b:navLink value="Separated link" href="#"></b:navLink>
+                <b:dropMenu value="Nested submenu" iconAwesome="birthday-cake" iconAlign="right">
+                    <b:navLink value="You can nest menus" href="#"></b:navLink>
+                    <b:dropMenu value="Nested sub-submenu">
+                        <b:navLink value="... as deep as ..." href="#"></b:navLink>
+                        <b:dropMenu value="Nested sub-sub-submenu">
+                            <b:navLink value="... you want!" href="#"></b:navLink>
+                        </b:dropMenu>
+                    </b:dropMenu>
+
+                </b:dropMenu>
+                <b:navLink value="One more separated link" href="#"></b:navLink>
+            </b:dropMenu>
+        </b:navbarLinks>
+        <!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
+        <b:navbarLinks pull="right"><b:navLink value="    " href="#"></b:navLink></b:navbarLinks>
+        <b:navbarLinks pull="right" styleClass="hidden-xs">
+            <b:navLink value="Link" href="#"></b:navLink>
+            <b:dropMenu value="Dropdown">
+                <b:navLink value="Action" href="#"></b:navLink>
+                <b:navLink value="Another action" href="#"></b:navLink>
+                <b:navLink value="Something else here" href="#"></b:navLink>
+                <b:navLink></b:navLink>
+                <b:navLink header="Nav header"></b:navLink>
+                <b:navLink value="Separated link" href="#"></b:navLink>
+                <b:navLink value="One more separated link" href="#"></b:navLink>
+            </b:dropMenu>
+        </b:navbarLinks>
+    </b:navBar>
     <h:graphicImage name="/images/headerlogo.png" alt="headerlogo"/>
     <p:dataTable var="locatie" value="#{locatieController.locaties}" id="locationDataTable">
         <p:column headerText="Id">
