tabel met reizen op index

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,13 +8,29 @@
 <h:head><title>Travel More!</title></h:head>
 <h:body>
     <h:graphicImage name="/images/headerlogo.png" alt="headerlogo"/>
-    <p:dataTable var="locatie" value="#{locatieController.locaties}" id="locationDataTable">
+    <p:dataTable var="reis" value="#{reisController.reizen}" id="locationDataTable">
         <p:column headerText="Id">
-            <h:outputText value="#{locatie.id}" />
+            <h:outputText value="#{reis.id}" />
         </p:column>
 
-        <p:column headerText="Naam">
-            <h:outputText value="#{locatie.naam}" />
+        <p:column headerText="Vertrektijd">
+            <h:outputText value="#{reis.vertrekTijd}" />
+        </p:column>
+
+        <p:column headerText="Aankomsttijd">
+            <h:outputText value="#{reis.aankomstTijd}" />
+        </p:column>
+
+        <p:column headerText="Prijs">
+            <h:outputText value="#{reis.prijs}" />
+        </p:column>
+
+        <p:column headerText="Vertrekpunt">
+            <h:outputText value="#{reis.vertrekLocatie.naam}" />
+        </p:column>
+
+        <p:column headerText="Aankomstpunt">
+            <h:outputText value="#{reis.aankomstLocatie.naam}" />
         </p:column>
 
     </p:dataTable>
