--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
 
     <b:navBar brand="Brand" brandHref="index.xhtml" fluid="true">
         <b:navbarLinks>
-            <b:navLink value="Link" href="#"></b:navLink>
+            <b:navLink value="Link" href="nav.xhtml"></b:navLink>
             <b:navLink value="Link" href="#"></b:navLink>
             <b:dropMenu value="Dropdown" iconAwesome="birthday-cake">
                 <b:navLink value="Action" href="#"></b:navLink>
