--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:b="http://bootsfaces.net/ui">
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:f = "http://java.sun.com/jsf/core">
 <h:head>
     <title>Travel More!</title>
 
@@ -52,6 +53,14 @@
 <h:body>
     <h:graphicImage name="/images/headerlogo.png" alt="headerlogo"/>
 
+
+    <b:formGroup>
+        <b:selectOneMenu value="#{reisController.vertrekLoccaties}" colMd="4" label="Selecteer vertrekpunt" labelColMd="4">
+           <f:selectItems value="#{reisController.vertrekLoccaties}"  var="vertrek" itemValue="#{vertrek.naam}" />
+        </b:selectOneMenu>
+    </b:formGroup>
+
+    <br/>
 
     <b:dataTable value="#{reisController.reizen}"
                  var="reis" id="locationDataTable">
