--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:b="http://bootsfaces.net/ui">
 <h:head>
-    <title>Travel More!</title>
+    <title>Login</title>
+</h:head>
 
-    <b:navBar brand="Brand" brandHref="index.xhtml" fluid="true">
+<h:body>
+    <b:navBar brand="Brand" brandHref="login.xhtml" fluid="true">
         <b:navbarLinks>
             <b:navLink value="Link" href="#"></b:navLink>
             <b:navLink value="Link" href="#"></b:navLink>
@@ -48,39 +51,24 @@
             </b:dropMenu>
         </b:navbarLinks>
     </b:navBar>
-</h:head>
-<h:body>
     <h:graphicImage name="/images/headerlogo.png" alt="headerlogo"/>
-    <p:dataTable var="reis" value="#{reisController.reizen}" id="locationDataTable"/>
+    <div id="email" class="input-group">
+        <span class="input-group-addon">
+            <span>
+                <i class="glyphicon glyphicon-user"></i>
+            </span>
+        </span>
+        <input type="text" name="logintxt"  size="30" placeholder="email" />
+    </div>
+    <div  class="input-group">
+        <span class="input-group-addon">
+            <span>
+                <i  class="fa fa-key"></i>
+            </span>
+        </span>
+        <input type="password" name="passwordtxt" size="30" placeholder="wachtwoord" />
+    </div>
 
-    <h:graphicImage name="/images/headerlogo_transparent.png" alt="headerlogo"/>
-    <b:dataTable var="locatie" value="#{locatieController.locaties}" id="locationDataTable">
-
-        <p:column headerText="Id">
-            <h:outputText value="#{reis.id}" />
-        </p:column>
-
-        <p:column headerText="Vertrektijd">
-            <h:outputText value="#{reis.vertrekTijd}" />
-        </p:column>
-
-        <p:column headerText="Aankomsttijd">
-            <h:outputText value="#{reis.aankomstTijd}" />
-        </p:column>
-
-        <p:column headerText="Prijs">
-            <h:outputText value="#{reis.prijs}" />
-        </p:column>
-
-        <p:column headerText="Vertrekpunt">
-            <h:outputText value="#{reis.vertrekLocatie.naam}" />
-        </p:column>
-
-        <p:column headerText="Aankomstpunt">
-            <h:outputText value="#{reis.aankomstLocatie.naam}" />
-        </p:column>
-
-    </b:dataTable>
 
 </h:body>
 </html>
