--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -55,20 +55,23 @@
 
     <h:graphicImage name="/images/headerlogo.png" alt="headerlogo"/>
 
-    <b:formGroup>
-        <b:selectOneMenu value="#{reisController.vertrekLoccaties}" colMd="4" label="Selecteer vertrekpunt" labelColMd="4">
-           <f:selectItems value="#{reisController.vertrekLoccaties}"  var="vertrek" itemValue="#{vertrek.naam}" />
-        </b:selectOneMenu>
-    </b:formGroup>
+
+
+    <h4>AANKOMSt</h4>
+
+    <b:dataTable value="#{locatieController.aankomstLocaties}"
+                 var="locatie" id="locationDataTable">
+        <b:dataTableColumn value="#{locatie.naam}" order="asc" />
+    </b:dataTable>
 
     <br/>
 
     <b:dataTable value="#{reisController.reizen}"
-                 var="reis" id="locationDataTable">
+                 var="reis" id="ReizenDataTable">
         <b:dataTableColumn value="#{reis.vertrekTijd}" order="asc" />
         <b:dataTableColumn value="#{reis.aankomstTijd}" />
-        <b:dataTableColumn value="#{reis.vertrekLocatie.naam}" />
-        <b:dataTableColumn value="#{reis.aankomstLocatie.naam}" />
+        <b:dataTableColumn label="Vertrek" value="#{reis.vertrekLocatie.naam}" />
+        <b:dataTableColumn label="Aankomst" value="#{reis.aankomstLocatie.naam}" />
         <b:dataTableColumn value="#{reis.prijs}"  />
     </b:dataTable>
 
