--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,6 +12,7 @@
 </h:head>
 
 <h:body>
+    <h:form>
     <b:navBar brandImg="resources/images/headerlogo_transparent.png" brandImgStyle="width:125px;margin-top:-12px" brandHref="index.xhtml" fluid="true">
         <b:navbarLinks>
             <b:navLink value="Link" href="nav.xhtml"></b:navLink>
@@ -24,6 +25,8 @@
         </b:navbarLinks>
     </b:navBar>
 
+    <h1>Login</h1>
+    <hr/>
     <div id="email" class="input-group">
         <span class="input-group-addon">
             <span>
@@ -41,7 +44,11 @@
         <input type="password" name="passwordtxt" size="30" placeholder="wachtwoord" />
         <button>log in</button>
     </div>
+        <div>
+            <p><a href="registreer.xhtml">nog geen account? registreer hier!</a> </p>
+        </div>
 
 
+    </h:form>
 </h:body>
 </html>
