--- a/src/main/webapp/registreer.xhtml
+++ b/src/main/webapp/registreer.xhtml
@@ -12,6 +12,8 @@
 </h:head>
 
 <h:body>
+    <h:form>
+
     <b:navBar brandImg="resources/images/headerlogo_transparent.png" brandImgStyle="width:125px;margin-top:-12px" brandHref="index.xhtml" fluid="true">
         <b:navbarLinks>
             <b:navLink value="Link" href="nav.xhtml"></b:navLink>
@@ -77,5 +79,6 @@
         </div>
     </div>
 
+    </h:form>
 </h:body>
 </html>
