--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
       xmlns:f = "http://java.sun.com/jsf/core">
 <h:head>
     <title>Travel More!</title>
-
+    <link href="resources/images/favicon.ico" rel="icon" type="image/x-icon" />
 
 </h:head>
 <h:body>
