--- a/src/main/webapp/nav.xhtml
+++ b/src/main/webapp/nav.xhtml
@@ -1,32 +1,38 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:b="http://bootsfaces.net/ui">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+<h:head>
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="bootstrap.css"/>
+</h:head>
 <h:body>
-    <title>Travel More!</title>
-    <b:form>
-    <div id="email" class="input-group">
-        <span class="input-group-addon">
-            <span>
-                <i class="glyphicon glyphicon-user"></i>
-            </span>
-        </span>
-        <b:inputText  type="text" name="logintxt"  size="30" value="#{gebruikerController.gebruiker.email}" placeholder="email" />
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="starter-template">
+            <h1>Bootstrap starter template</h1>
+            <p class="lead">Use this document as a way to quickly start any new project.<br/> All you get is this text and a mostly barebones HTML document.</p>
+        </div>
     </div>
-    <div  class="input-group">
-        <span class="input-group-addon">
-            <span>
-                <i  class="fa fa-key"></i>
-            </span>
-        </span>
-        <b:inputText type="password" name="passwordtxt" size="30" value="#{gebruikerController.gebruiker.wachtwoord}" placeholder="wachtwoord"/>
-        <b:commandButton value="registreer" action="#{gebruikerController.registreerGebruiker}"/>
-    </div>
-    </b:form>
-
 </h:body>
 </html>
