--- a/src/main/webapp/reizen.xhtml
+++ b/src/main/webapp/reizen.xhtml
@@ -14,40 +14,27 @@
 
 <h:body>
     <h:form>
-    <b:navBar brandImg="resources/images/headerlogo_transparent.png" brandImgStyle="width:125px;margin-top:-12px" brandHref="index.xhtml" fluid="true">
-        <b:navbarLinks>
-            <b:navLink value="Link" href="nav.xhtml"></b:navLink>
-            <b:navLink value="Link" href="#"></b:navLink>
-        </b:navbarLinks>
-        <!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
-        <b:navbarLinks pull="right"><b:navLink value="    " href="#"></b:navLink></b:navbarLinks>
-        <b:navbarLinks pull="right" styleClass="hidden-xs">
-            <b:navLink value="Login" href="login.xhtml"></b:navLink>
-        </b:navbarLinks>
-    </b:navBar>
-<div class="container">
-    <h1>Onze reizen : </h1>
-<div class="table table-striped table">
-        <p:dataTable   var="car" value="#{dtBasicView.cars}">
-            <p:column headerText="Id">
-                <h:outputText value="#{car.id}" />
-            </p:column>
+        <ui:composition template="/templates/layout.xhtml">
+            <ui:define name="content">
+                <h1>Onze reizen : </h1>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item active">Van -> Naar </a>
+                            <a href="#" class="list-group-item">Second item</a>
+                            <a href="#" class="list-group-item">Third item</a>
+                        </div>
 
-            <p:column headerText="Year">
-                <h:outputText value="#{car.year}" />
-            </p:column>
-
-            <p:column headerText="Brand">
-                <h:outputText value="#{car.brand}" />
-            </p:column>
-
-            <p:column headerText="Color">
-                <h:outputText value="#{car.color}" />
-            </p:column>
-        </p:dataTable>
-    </div>
-
-</div>
+                    </div>
+                    <div class="col-8">
+                        <p>Van : reisvertrek - reistijdvertrek</p>
+                        <p>Naar : reisaankomst - reistijdaankomst</p>
+                        <p>prijs</p>
+                        <button type="submit">Boeken</button>
+                    </div>
+                </div>
+            </ui:define>
+        </ui:composition>
     </h:form>
 </h:body>
 </html>
