--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -23,19 +23,19 @@
                         <h:form class="login-form">
                             <div class="form-group">
                                 <label >Naam</label>
-                                <input type="text" class="form-control"/>
+                                <p:inputText value="#{GebruikerController.gebruiker.email}"  type="text" class="form-control"/>
 
                             </div>
                             <div class="form-group">
                                 <label >Wachtwoord</label>
-                                <input type="password" class="form-control" />
+                                <p:inputText value="#{GebruikerController.gebruiker.wachtwoord}"  type="password" class="form-control" />
 
                             </div>
 
                             <div class="form-check">
                                 <a href="index.xhtml">Terug</a>
 
-                                <button type="submit" class="btn btn-login float-right">Login</button>
+                                <h:commandButton value="Login" class="btn btn-login float-right" action="#{GebruikerController.login}" />
                                 <a href="registreer.xhtml" class="btn btn-login float-right mr-2">Registreer</a>
 
                             </div>
