--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xml:lang="en" lang="en">
-<head>
-    <title>Title</title>
-</head>
-<body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="/templates/layout.xhtml">
         <ui:define name="header">
-            <ui:include src="../templates/adminHeader.xhtml" />
+            <ui:include src="/templates/adminHeader.xhtml" />
         </ui:define>
         <ui:define name="content">
             Mooie admin test
         </ui:define>
-
     </ui:composition>
-</body>
 </html>
