--- a/src/main/webapp/bezoeker/login.xhtml
+++ b/src/main/webapp/bezoeker/login.xhtml
@@ -33,7 +33,7 @@
                             </div>
 
                             <div class="form-check">
-                                <a href="index.xhtml">Terug</a>
+                                <a href="../index.xhtml">Terug</a>
 
                                 <h:commandButton value="Login" class="btn btn-login float-right" action="#{GebruikerController.login}" />
                                 <a href="registreer.xhtml" class="btn btn-login float-right mr-2">Registreer</a>
