--- a/src/main/webapp/admin/locaties.xhtml
+++ b/src/main/webapp/admin/locaties.xhtml
@@ -23,7 +23,7 @@
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse#{locatie.id}" aria-controls="collapse#{locatie.id}">
                                     <div class="row">
                                         <div class="col-12">
-                                            <h:outputText value="#{locatie.stad} - #{locatie.naam}" />
+                                            <h:outputText value="#{locatie}" />
 
                                         </div>
                                     </div>
@@ -33,11 +33,14 @@
                                         <div class="col-5">
                                             <h:commandButton value="Pas aan" styleClass="btn btn-primary">
                                                 <f:setPropertyActionListener target="#{LocatieController.geselecteerdeId}" value="#{locatie.id}" />
-                                                <f:ajax event="action" render="@all" onevent="showModal"/>
+                                                <f:ajax event="action" render="@all" onevent="showLocatieModal"/>
                                             </h:commandButton>
                                         </div>
                                         <div class="offset-1 col-5">
-                                            <h:commandLink value="Verwijder" action="/" styleClass="btn btn-danger"></h:commandLink>
+                                            <h:commandButton value="Verwijder" styleClass="btn btn-danger">
+                                                <f:setPropertyActionListener target="#{LocatieController.geselecteerdeId}" value="#{locatie.id}" />
+                                                <f:ajax event="action" render="@all" onevent="showConfirmModal"/>
+                                            </h:commandButton>
                                         </div>
                                     </div>
                                 </div>
@@ -84,7 +87,7 @@
                         <div class="row">
                             <div class="col-12 text-right">
                                 <h:commandButton action="#{LocatieController.newLocatie()}" value="Maak nieuwe locatie aan" styleClass="btn btn-primary">
-                                    <f:ajax event="action" render="@all" onevent="showModal"/>
+                                    <f:ajax event="action" render="@all" onevent="showLocatieModal"/>
                                 </h:commandButton>
                             </div>
                         </div>
@@ -94,7 +97,11 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="locatieModallabel">Locatie - #{LocatieController.geselecteerdeLocatie.naam} wijzigen</h5>
+                                    <h5 class="modal-title" id="locatieModallabel">
+                                        <h:outputText rendered="#{empty LocatieController.geselecteerdeLocatie.naam}">Nieuwe</h:outputText>
+                                        Locatie #{LocatieController.geselecteerdeLocatie.naam}
+                                        <h:outputText rendered="#{not empty LocatieController.geselecteerdeLocatie.naam}">wijzigen</h:outputText>
+                                    </h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -137,12 +144,37 @@
                         </div>
                     </div>
 
+                    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="confirmModalLabel">Bevestiging</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Weet u zeker dat u de locatie #{LocatieController.geselecteerdeLocatie.naam} - #{LocatieController.geselecteerdeLocatie.stad} wilt verwijderen?
+                                    Deze actie kan niet ongedaan gemaakt worden!
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleer</button>
+                                    <h:commandButton action="#{LocatieController.deleteLocatie(LocatieController.geselecteerdeLocatie.id)}" value="Bevestig" styleClass="btn btn-danger" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </h:form>
             </div>
             <script>
-                function showModal(data) {
+                function showLocatieModal(data) {
                     if (data.status == "success") {
                         $('#locatieModal').modal();
+                    }
+                }
+                function showConfirmModal(data) {
+                    if (data.status == "success") {
+                        $('#confirmModal').modal();
                     }
                 }
             </script>
